Integration testing + Client
Match usecase
